fixed display on small width devices

--- a/style.css
+++ b/style.css
@@ -24,12 +24,9 @@ blockquote{
 h1{
   font-family: 'Cutive Mono';
 }
-P{
-  font-size:0.5em;
+div{
+  margin:0 20px;
 }
-h1,p{
+h1{
   margin:10px 0;
-}
-#title{
-  
 }
